# OKAR-Demo

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_install_2.8.12.sh  install_here_cmake2.8.12_linux.sh
cfg/: parameters.cfg  plugins.cfg  plugins_d.cfg  resources.cfg
include/: App.h  BaseApplication.h  Camera.h  ConfigDB.h  Globals.h  Rift.h  Scene.h  TutorialApplication.h  util.h
include/oculussdkextent/: HMDStateExtended.h  TrackingStateReaderExtended.h
source/: App.cpp  BaseApplication.cpp  Camera.cpp  Globals.cpp  Rift.cpp  Scene.cpp  TutorialApplication.cpp
source/oculussdkextent/: HMDStateExtended.cpp  OVR_CAPI_extended.cpp  TrackingStateReaderExtended.cpp
src/: Camera.cpp  ConfigDB.cpp  Globals.cpp  main.cpp
